# nypc-perf-napi

./: .gitattributes  .prettierignore  Cargo.toml  README.md  browser.js  index.d.ts  index.js  nypc-perf-napi.wasi-browser.js  nypc-perf-napi.wasi.cjs  package.json
.github/workflows/: CI.yml
__test__/: index.spec.ts
src/: lib.rs
