
[package]
authors = ["NEXON Algorithm Research Team <_algorithm@nexon.co.kr>"]
edition = "2024"
name = "nypc-perf-napi"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
nypc-perf = "0.1.2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
